--- a/kontakts.html
+++ b/kontakts.html
@@ -109,7 +109,8 @@
         #logo{
             width:80px;
             height:61px;
-            margin-top: 15px;
+           
+            margin-left:20px;
             margin-left:20px;
         }
         .nav{
