--- a/überuns.html
+++ b/überuns.html
@@ -114,7 +114,7 @@
         #logo{
             width:80px;
             height:61px;
-            margin-top: 15px;
+            margin-left:20px;
             margin-left:20px;
         }
         .nav{
