--- a/kontakts.html
+++ b/kontakts.html
@@ -109,9 +109,9 @@
         #logo{
             width:80px;
             height:61px;
-           
+            margin-top:26px;
             margin-left:20px;
-            margin-left:20px;
+            
         }
         .nav{
             list-style-type: none;
