--- a/überuns.html
+++ b/überuns.html
@@ -115,7 +115,7 @@
             width:80px;
             height:61px;
             margin-left:20px;
-            margin-left:20px;
+            margin-top:26px;
         }
         .nav{
             list-style-type: none;
